Override color of section headings

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,4 +5,6 @@ $header-heading-color: #FAFAFA;
 $header-bg-color: #1E6CBA;
 $header-bg-color-secondary: rgb(102, 198, 250);
 
+$section-headings-color: #EB9048;
+
 @import "{{ site.theme }}";
